difficult to click nav bar on smaller screens, attempt to fix with padding and word spacing

--- a/assets/css/styling.css
+++ b/assets/css/styling.css
@@ -140,6 +140,7 @@ body {
 #susan {
     height: 75%;
     border-radius: 50%;
+    width: 50%;
     margin: 10px 20px 20px 2px;
 
 }
@@ -172,8 +173,9 @@ ul {
 }
 #doginbath {
     height: 75%;
+    width: 60%;
     border-radius: 50%;
-    margin: 10px 20px 20px 10px;
+    margin:20px 20px 20px 10px;
 }
 .contact-us {
     color: #f6f9f7;
@@ -359,7 +361,6 @@ span > a:hover {
             margin-top: 20px;
         }
 
-        }
         #paw-print-one {
             display: none
         }
@@ -391,7 +392,7 @@ span > a:hover {
             display: flex;
             align-items: center;
             align-content: center;
-            width: 300px;px;
+            width: 300px;
             padding: 0;
             margin-top: 20px;
         }
@@ -419,6 +420,10 @@ span > a:hover {
             width: 200px;
             padding: 0;
             margin-top: 20px; 
+        }
+        nav > a {
+            word-spacing: 10px;
+            padding: 10px;
         }
     }
 
